@@ -1,3 +1,7 @@
+2007-10-02 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCval.h: unified double2ul macro for all platforms
+
 2007-09-30 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCval.h: fixed bug #1739860 - sdcc does not work correctly on some
